--- a/tests/win8_metro/Cocos2d_win8_metro.vcxproj.filters
+++ b/tests/win8_metro/Cocos2d_win8_metro.vcxproj.filters
@@ -932,6 +932,9 @@
     <ClInclude Include="..\..\cocos2dx\platform\win8_metro\DirectXHelper.h">
       <Filter>cocos2dx\platform\win8_metro</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\cocos2dx\platform\win8_metro\FileHelper.h">
+      <Filter>cocos2dx\platform\win8_metro</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\tests\tests\controller.h">
       <Filter>Classes\tests</Filter>
     </ClInclude>
