Additional API usage is explicitly specified

--- a/HelloWorld/wp8/HelloWorld_WP8.vcxproj.filters
+++ b/HelloWorld/wp8/HelloWorld_WP8.vcxproj.filters
@@ -1234,5 +1234,6 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="WMAppManifest.xml" />
+    <Xml Include="RPALManifest.xml" />
   </ItemGroup>
 </Project>
