--- a/HelloWorld/wp8/HelloWorld_WP8.vcxproj
+++ b/HelloWorld/wp8/HelloWorld_WP8.vcxproj
@@ -60,22 +60,22 @@
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINAPI_PARTITION_PHONE_RESTRICTED;_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINAPI_PARTITION_PHONE_RESTRICTED;_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile>
-      <PreprocessorDefinitions>_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINAPI_PARTITION_PHONE_RESTRICTED;_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
-      <PreprocessorDefinitions>_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINAPI_PARTITION_PHONE_RESTRICTED;_WINPHONE;PSAPI_VERSION=2;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions);TIXML_USE_STL;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup>
@@ -89,7 +89,7 @@
       <CompileAsWinRT Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</CompileAsWinRT>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d2d1.lib;d3d11.lib;dxgi.lib;dwrite.lib;dxguid.lib;xaudio2.lib;libpng.lib;libxml2.lib;libjpeg.lib;zlib.lib;windowscodecs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d2d1.lib;d3d11.lib;dxgi.lib;dwrite.lib;dxguid.lib;xaudio2.lib;libpng.lib;libxml2.lib;libjpeg.lib;zlib.lib;windowscodecs.lib;mincore.lib;RuntimeObject.lib;PhoneAppModelHost.lib</AdditionalDependencies>
       <GenerateWindowsMetadata>true</GenerateWindowsMetadata>
       <!-- TODO:Please remove below IgnoreSpecificDefaultLibraries once dev11 bug 362091 is fixed -->
       <IgnoreSpecificDefaultLibraries>ole32.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="WMAppManifest.xml" />
+    <Xml Include="RPALManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
